// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberOfPages display \`page\` if number_of_pages is 1 1`] = `
<span>
  1
   
  page
</span>
`;

exports[`NumberOfPages renders empty if null 1`] = `""`;

exports[`NumberOfPages renders with number of pages 1`] = `
<span>
  100
   
  pages
</span>
`;
